// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmDialog component should render correctly when closed 1`] = `
<Modal
  actions={
    Array [
      <Button
        aria-label="Close Modal"
        onClick={[MockFunction]}
        variant="tertiary"
      >
        Trans(i18nKey=close)
      </Button>,
      <Button
        aria-label="Trans(i18nKey=confirm)"
        data-cy="confirm"
        onClick={[Function]}
      >
        Trans(i18nKey=confirm)
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={false}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title="Confirm Dialog Title"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  Body
</Modal>
`;

exports[`ConfirmDialog component should render correctly when opened 1`] = `
<Modal
  actions={
    Array [
      <Button
        aria-label="Close Modal"
        onClick={[MockFunction]}
        variant="tertiary"
      >
        Trans(i18nKey=close)
      </Button>,
      <Button
        aria-label="Trans(i18nKey=confirm)"
        data-cy="confirm"
        onClick={[Function]}
      >
        Trans(i18nKey=confirm)
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title="Confirm Dialog Title"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  Body
</Modal>
`;
